Frankbelford/uatv1ba/force-app/main/default/objects/Job_Opportunity_Contact_Role__c/Job_Opportunity_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>Junction object used to link</description>
    <label>Client Opportunity Contact Role</label>
    <nameField>
        <displayFormat>OCR-{0000}</displayFormat>
        <label>Client Opportunity Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Opportunity Contact Role</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>