Frankbelford/uatv1ba/force-app/main/default/objects/Job_Opportunity_Contact_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Job_Opportunity_Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>