Frankbelford/uatv1ba/force-app/main/default/objects/Job_Opportunity_Contact_Role__c/fields/Job_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Job_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client Opportunity</label>
    <referenceTo>jsjo__Job_Opportunity__c</referenceTo>
    <relationshipLabel>Client Opportunity Contact Role</relationshipLabel>
    <relationshipName>Job_Opportunity_Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>