Frankbelford/uatv1ba/force-app/main/default/objects/Job_Opportunity_Contact_Role__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Opportunity Contact Role</relationshipLabel>
    <relationshipName>Job_Opportunity_Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>